--- a/index.html
+++ b/index.html
@@ -191,25 +191,6 @@
                 font-size: 14px; /* Adjust this value to your desired font size */
             }
         }
-        #codeInputContainer {
-            display: none;
-            flex-direction: column;
-            align-items: center;
-            margin-top: 20px;
-        }
-        #codeInput {
-            padding: 10px;
-            font-size: 16px;
-            margin-bottom: 10px;
-        }
-        #confirmCodeButton {
-            padding: 10px 20px;
-            font-size: 16px;
-            background-color: #9700f8;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
     </style>
 </head>
 <body>
@@ -229,153 +210,164 @@
     </div>
 
     <script>
-    const chatContainer = document.getElementById('chatContainer');
-    const chatbox = document.getElementById('chatbox');
-    const inputBox = document.getElementById('inputBox');
-    const sendButton = document.getElementById('sendButton');
-    const minimizedChat = document.getElementById('minimizedChat');
-    let typingIndicator;
-    let paywallTimer;
-    let conversationHistory = [];
-    let isPaywallActive = false;
-    let codeVerified = false;
+        const chatContainer = document.getElementById('chatContainer');
+        const chatbox = document.getElementById('chatbox');
+        const inputBox = document.getElementById('inputBox');
+        const sendButton = document.getElementById('sendButton');
+        const minimizedChat = document.getElementById('minimizedChat');
+        let typingIndicator;
+        let conversationHistory = [];
 
-    // Define the toggleChat function
-    function toggleChat() {
-        if (chatContainer.style.display === 'none') {
-            chatContainer.style.display = 'block';
-            chatContainer.classList.add('open');
-            minimizedChat.style.display = 'none';
-            startPaywallTimer();
+        // Define the toggleChat function
+        function toggleChat() {
+            if (chatContainer.style.display === 'none') {
+                chatContainer.style.display = 'block';
+                chatContainer.classList.add('open');
+                minimizedChat.style.display = 'none';
+            } else {
+                chatContainer.style.display = 'none';
+                chatContainer.classList.remove('open');
+                minimizedChat.style.display = 'flex';
+            }
+        }
+
+        // Function to load document text
+        async function loadDocumentText() {
+            const response = await fetch('https://raw.githubusercontent.com/AugmentedRealityweb/astrograma/main/Steli.txt');
+            const text = await response.text();
+            return text;
+        }
+
+        // Function to fetch current date and time
+        async function fetchCurrentDateTime() {
+            try {
+                const response = await fetch('https://worldtimeapi.org/api/timezone/Europe/Bucharest');
+                const response = await fetch('https://worldtimeapi.org/api/timezone/Europe/Bucharest');
+const data = await response.json();
+return data.datetime; // Returnează timpul curent în format ISO
+} catch (error) {
+    console.error("Error fetching current date and time:", error);
+    return null;
+}
+}
+
+function formatResponse(response) {
+    return response.replace(/(?:\.\s*)/g, '.<br><br>');
+}
+
+function showTypingIndicator() {
+    typingIndicator = document.createElement('div');
+    typingIndicator.className = 'typing-indicator';
+    typingIndicator.innerHTML = '<div class="dot"></div><div class="dot"></div><div class="dot"></div>';
+    chatbox.appendChild(typingIndicator);
+    chatbox.scrollTop = chatbox.scrollHeight;
+}
+
+function removeTypingIndicator() {
+    if (typingIndicator) {
+        typingIndicator.remove();
+        typingIndicator = null;
+    }
+}
+
+async function sendMessage() {
+    const userMessage = inputBox.value.trim();
+    if (userMessage === '') return;
+
+    // Adaugă mesajul utilizatorului în chat
+    chatbox.innerHTML += `<div class="message user"><p>${userMessage}</p></div>`;
+    chatbox.scrollTop = chatbox.scrollHeight;
+
+    // Golește caseta de input
+    inputBox.value = '';
+
+    // Adaugă mesajul utilizatorului în istoricul conversației
+    conversationHistory.push({ role: "user", content: userMessage });
+
+    // Adaugă indicatorul de tastare
+    showTypingIndicator();
+
+    try {
+        const documentText = await loadDocumentText();
+        const currentDateTime = await fetchCurrentDateTime();
+        const formattedDate = currentDateTime ? new Date(currentDateTime).toLocaleDateString('ro-RO') : 'unavailable';
+        const systemMessage = `
+            You are Astrologul, a friendly and knowledgeable astrology specialist.
+            Today is ${formattedDate}. The following is the detailed knowledge base you will use to answer questions and provide insights: ${documentText}
+        `;
+
+        const response = await fetch('/api/chat', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+                model: "gpt-3.5-turbo",
+                messages: [
+                    {
+                        role: "system",
+                        content: systemMessage
+                    },
+                    ...conversationHistory
+                ]
+            })
+        });
+
+        if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
+        }
+
+        const data = await response.json();
+        console.log("Response from API:", data);
+
+        if (data.choices && data.choices.length > 0) {
+            let assistantMessage = data.choices[0].message.content;
+            assistantMessage = formatResponse(assistantMessage);
+
+            // Adaugă răspunsul asistentului în istoricul conversației
+            conversationHistory.push({ role: "assistant", content: assistantMessage });
+
+            // Scoate indicatorul de tastare
+            removeTypingIndicator();
+
+            chatbox.innerHTML += `<div class="message assistant"><p>${assistantMessage}</p></div>`;
+            chatbox.scrollTop = chatbox.scrollHeight;
         } else {
-            chatContainer.style.display = 'none';
-            chatContainer.classList.remove('open');
-            minimizedChat.style.display = 'flex';
+            throw new Error("Invalid response format");
         }
-    }
-
-    // Function to load document text
-    async function loadDocumentText() {
-        const response = await fetch('https://raw.githubusercontent.com/AugmentedRealityweb/astrograma/main/Steli.txt');
-        const text = await response.text();
-        return text;
-    }
-
-    // Function to fetch current date and time
-    async function fetchCurrentDateTime() {
-        try {
-            const response = await fetch('https://worldtimeapi.org/api/timezone/Europe/Bucharest');
-            const data = await response.json();
-            return data.datetime; // Returnează timpul curent în format ISO
-        } catch (error) {
-            console.error("Error fetching current date and time:", error);
-            return null;
-        }
-    }
-
-    function formatResponse(response) {
-        return response.replace(/(?:\.\s*)/g, '.<br><br>');
-    }
-
-    function showTypingIndicator() {
-        typingIndicator = document.createElement('div');
-        typingIndicator.className = 'typing-indicator';
-        typingIndicator.innerHTML = '<div class="dot"></div><div class="dot"></div><div class="dot"></div>';
-        chatbox.appendChild(typingIndicator);
+    } catch (error) {
+        console.error("Error during API request:", error);
+        removeTypingIndicator();
+        chatbox.innerHTML += `<div class="message assistant"><p>There was an error processing your request. Please try again.</p></div>`;
         chatbox.scrollTop = chatbox.scrollHeight;
     }
+}
 
-    function removeTypingIndicator() {
-        if (typingIndicator) {
-            typingIndicator.remove();
-            typingIndicator = null;
-        }
-    }
+async function openChatWithInitialMessage() {
+    toggleChat();
+    chatbox.innerHTML += `
+        <div class="message assistant">
+            <p>
+                Bună, pentru a începe sesiunea, spune-mi despre ce subiect ai vrea să vorbim:<br>
+                1. Harta natală<br>
+                2. Tranzite și Predicții<br>
+                3. Compatibilitate<br>
+                4. Aspecte personale<br>
+                5. Astrologie zilnică și săptămânală<br>
+                6. Întrebări generale despre astrologie
+            </p>
+        </div>`;
+}
 
-    async function sendMessage() {
-        // Adaugă indicatorul de tastare
-        showTypingIndicator();
-
-        try {
-            const documentText = await loadDocumentText();
-            const currentDateTime = await fetchCurrentDateTime();
-            const formattedDate = currentDateTime ? new Date(currentDateTime).toLocaleDateString('ro-RO') : 'unavailable';
-            const systemMessage = `
-                You are Astrologul, a friendly and knowledgeable astrology specialist.
-                Today is ${formattedDate}. The following is the detailed knowledge base you will use to answer questions and provide insights: ${documentText}
-            `;
-
-            const response = await fetch('/api/chat', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    model: "gpt-3.5-turbo",
-                    messages: [
-                        {
-                            role: "system",
-                            content: systemMessage
-                        },
-                        ...conversationHistory
-                    ]
-                })
-            });
-
-            if (!response.ok) {
-                throw new Error(`HTTP error! status: ${response.status}`);
-            }
-
-            const data = await response.json();
-            console.log("Response from API:", data);
-
-            if (data.choices && data.choices.length > 0) {
-                let assistantMessage = data.choices[0].message.content;
-                assistantMessage = formatResponse(assistantMessage);
-
-                // Adaugă răspunsul asistentului în istoricul conversației
-                conversationHistory.push({ role: "assistant", content: assistantMessage });
-
-                // Scoate indicatorul de tastare
-                removeTypingIndicator();
-
-                chatbox.innerHTML += `<div class="message assistant"><p>${assistantMessage}</p></div>`;
-                chatbox.scrollTop = chatbox.scrollHeight;
-            } else {
-                throw new Error("Invalid response format");
-            }
-        } catch (error) {
-            console.error("Error during API request:", error);
-            removeTypingIndicator();
-            chatbox.innerHTML += `<div class="message assistant"><p>There was an error processing your request. Please try again.</p></div>`;
-            chatbox.scrollTop = chatbox.scrollHeight;
-        }
-    }
-
-    async function openChatWithInitialMessage() {
-        toggleChat();
-        chatbox.innerHTML += `
-            <div class="message assistant">
-                <p>
-                    Bună, pentru a începe sesiunea, spune-mi despre ce subiect ai vrea să vorbim:<br>
-                    1. Harta natală<br>
-                    2. Tranzite și Predicții<br>
-                    3. Compatibilitate<br>
-                    4. Aspecte personale<br>
-                    5. Astrologie zilnică și săptămânală<br>
-                    6. Întrebări generale despre astrologie
-                </p>
-            </div>`;
-    }
-
-    // Automatically open chat after 2 seconds
-    window.onload = function() {
-        chatContainer.style.display = 'none';
-        minimizedChat.style.display = 'flex';
-        setTimeout(() => {
-            openChatWithInitialMessage();
-        }, 2200);
-    };
+// Automatically open chat after 2 seconds
+window.onload = function() {
+    chatContainer.style.display = 'none';
+    minimizedChat.style.display = 'flex';
+    setTimeout(() => {
+        openChatWithInitialMessage();
+    }, 2200);
+};
 </script>
 </body>
 </html>
+
