--- a/index.html
+++ b/index.html
@@ -233,19 +233,18 @@
 
         // Function to load document text
         async function loadDocumentText() {
-            const response = await fetch('https://raw.githubusercontent.com/AugmentedRealityweb/astrograma/main/Steli.txt');
-            const text = await response.text();
+            const responseText = await fetch('https://raw.githubusercontent.com/AugmentedRealityweb/astrograma/main/Steli.txt');
+            const text = await responseText.text();
             return text;
         }
 
         // Function to fetch current date and time
         async function fetchCurrentDateTime() {
             try {
-                const response = await fetch('https://worldtimeapi.org/api/timezone/Europe/Bucharest');
-                const response = await fetch('https://worldtimeapi.org/api/timezone/Europe/Bucharest');
-const data = await response.json();
-return data.datetime; // Returnează timpul curent în format ISO
-} catch (error) {
+                const responseTime = await fetch('https://worldtimeapi.org/api/timezone/Europe/Bucharest');
+                const data = await responseTime.json();
+                return data.datetime; // Returnează timpul curent în format ISO
+            } catch (error) {
     console.error("Error fetching current date and time:", error);
     return null;
 }
@@ -296,7 +295,7 @@ async function sendMessage() {
             Today is ${formattedDate}. The following is the detailed knowledge base you will use to answer questions and provide insights: ${documentText}
         `;
 
-        const response = await fetch('/api/chat', {
+        const responseApi = await fetch('/api/chat', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
@@ -313,11 +312,11 @@ async function sendMessage() {
             })
         });
 
-        if (!response.ok) {
-            throw new Error(`HTTP error! status: ${response.status}`);
+        if (!responseApi.ok) {
+            throw new Error(`HTTP error! status: ${responseApi.status}`);
         }
 
-        const data = await response.json();
+        const data = await responseApi.json();
         console.log("Response from API:", data);
 
         if (data.choices && data.choices.length > 0) {
@@ -370,4 +369,3 @@ window.onload = function() {
 </script>
 </body>
 </html>
-
