--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
             transition: border-radius 0.3s ease;
         }
         #chatContainer.open {
-            border-radius: 50px; /* Adjust the border-radius when opened */
+            border-radius: 50px;
+            bottom: 50%;
+            right: 50%;
+            transform: translate(50%, 50%);
+            border-radius: 20px/* Adjust the border-radius when opened */
         }
         #chatbox {
             flex-grow: 1;
