--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             position: fixed;
             bottom: 20px;
             right: 20px;
-            width: 400px; /* Adjust this value to your desired width */
+            width: 300px; /* Adjust this value to your desired width */
             max-width: 100%;
             display: none; /* Initially hidden */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -22,6 +22,7 @@
             flex-direction: column;
             max-height: 80vh; /* Adjust this value to your desired height */
             background-color: white;
+            background: url('gif.gif');
             transition: border-radius 0.3s ease;
         }
         #chatContainer.open {
